--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.1",
-    "express": "*",
+    "express": "*"
   },
   "devDependencies": {}
 }
