--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "alatte",
+  "name": "swagger-petstore",
   "version": "1.0.0",
-  "description": "alatte",
-  "main": "app.js",
+  "description": ".",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+	"prestart": "npm install",
+	"start": "node index.js"
   },
-  "author": "YMIYA",
-  "license": "ISC",
+  "keywords": [
+    "swagger"
+  ],
+  "license": "Unlicense",
+  "private": true,
   "dependencies": {
-    "body-parser": "^1.18.1",
-    "express": "*",
-  },
-  "devDependencies": {}
+    "connect": "^3.2.0",
+    "js-yaml": "^3.3.0",
+    "swagger-tools": "0.10.1"
+  }
 }
